Bug 1596238, Make NodeIterator less AddRef/Release heavy by trying to avoid use of strong pointer when the node is skipped because of whatToShow, r=Ehsan

TreeWalker could use some similar changes, but that is a different bug. TreeWalker does use TestNode method too, which is why
the new argument is optional. A new bug will be filed for TreeWalker.

Differential Revision: https://phabricator.services.mozilla.com/D53016

--HG--
extra : moz-landing-system : lando